deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echo
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo
    spec:
      containers:
        - name: echo
          image: europe-west3-docker.pkg.dev/swr-schulung-basic-1/swr-schulung-basic-1/echo-demo:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8081
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8081
            periodSeconds: 5
          volumeMounts:
            - name: configmap
              mountPath: /etc/configmap
            - name: secret
              mountPath: /etc/secret
      volumes:
        - name: configmap
          configMap:
            name: echo-configmap
        - name: secret
          secret:
            secretName: echo-secret
