service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo-service
spec:
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/name: echo
  sessionAffinity: None
  type: ClusterIP
