ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  labels:
    app.kubernetes.io/name: echo
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - echo-demo.s.pub-dev.tech
      secretName: nginx-demo-tls
  rules:
    - host: echo-demo.s.pub-dev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-service
                port:
                  number: 8081
